--- a/requirements.txt
+++ b/requirements.txt
@@ -3,27 +3,30 @@ chardet==4.0.0
 coloredlogs==15.0
 datefinder==0.7.1
 dateparser==1.0.0
-humanfriendly==9.1
 img2pdf==0.4.0
 lxml==4.6.3
-numpy==1.20.2
+numpy==1.14.4
 ocrmypdf==11.7.3
-pandas==1.2.4
+openpyxl==3.0.7
+pandas==0.23.0
+pdf2image==1.14.0
 pdfminer.six==20200517
 pdfplumber==0.5.27
-pikepdf==2.11.1
-Pillow==8.2.0
+pikepdf==2.11.0
+Pillow==7.2.0
 pluggy==0.13.1
 pycparser==2.20
 pycryptodome==3.10.1
 PyPDF2==1.26.0
-pyreadline==2.1
-python-dateutil==2.8.1
-pytz==2021.1
+python-dateutil==2.7.3
+pytz==2018.4
 regex==2021.4.4
-reportlab==3.5.67
+reportlab==3.5.66
 six==1.15.0
 sortedcontainers==2.3.0
+sqlparse==0.3.1
 tqdm==4.60.0
+typed-ast==1.4.1
 tzlocal==2.1
 Wand==0.6.6
+xlrd==1.1.0
