--- a/requirements.windows.txt
+++ b/requirements.windows.txt
@@ -3,6 +3,7 @@ chardet==4.0.0
 coloredlogs==15.0
 datefinder==0.7.1
 dateparser==1.0.0
+hachoir==3.1.2
 humanfriendly==9.1
 img2pdf==0.4.0
 lxml==4.6.3
