--- a/requirements.macos.txt
+++ b/requirements.macos.txt
@@ -12,6 +12,7 @@ Pillow==8.2.0
 pycryptodome==3.10.1
 PyPDF2==1.26.0
 python-dateutil==2.8.1
+python-docx==0.8.10
 pytz==2021.1
 regex==2021.4.4
 six==1.15.0
