--- a/requirements.windows.txt
+++ b/requirements.windows.txt
@@ -6,6 +6,7 @@ dateparser==1.0.0
 hachoir==3.1.2
 humanfriendly==9.1
 img2pdf==0.4.0
+importlib-metadata==4.0.1
 lxml==4.6.3
 numpy==1.19.5
 ocrmypdf==11.7.3
@@ -26,6 +27,8 @@ reportlab==3.5.67
 six==1.15.0
 sortedcontainers==2.3.0
 tqdm==4.60.0
+typing-extensions==3.10.0.0
 tzlocal==2.1
 Wand==0.6.6
 XlsxWriter==1.3.9
+zipp==3.4.1
