--- a/requirements.windows.txt
+++ b/requirements.windows.txt
@@ -3,6 +3,8 @@ chardet==4.0.0
 coloredlogs==15.0
 datefinder==0.7.1
 dateparser==1.0.0
+gitdb==4.0.7
+GitPython==3.1.18
 hachoir==3.1.2
 humanfriendly==9.1
 img2pdf==0.4.0
@@ -25,6 +27,7 @@ pytz==2021.1
 regex==2021.4.4
 reportlab==3.5.67
 six==1.15.0
+smmap==4.0.0
 sortedcontainers==2.3.0
 tqdm==4.60.0
 typing-extensions==3.10.0.0
