--- a/requirements.macos.txt
+++ b/requirements.macos.txt
@@ -1,6 +1,8 @@
 chardet==4.0.0
 datefinder==0.7.1
 dateparser==1.0.0
+gitdb==4.0.7
+GitPython==3.1.18
 hachoir==3.1.2
 lxml==4.6.3
 numpy==1.19.5
@@ -15,7 +17,9 @@ python-dateutil==2.8.1
 pytz==2021.1
 regex==2021.4.4
 six==1.15.0
+smmap==4.0.0
 sortedcontainers==2.3.0
+typing-extensions==3.10.0.0
 tzlocal==2.1
 Wand==0.6.6
 XlsxWriter==1.3.9
